fixing alignment

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ nav{
 	height: 50px;
 	background-color: #CCC;
 	text-align: center;
-	text-orientation: bottom;
+	text-align: bottom;
 }
 
 nav a{
